# proxmox2discord

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
proxmox2discord/: cli.py  config.py  discord.py  endpoints.py  main.py
proxmox2discord/schemas/: notify.py  responses.py
scripts/: install.ps1  install.sh
